# cole

./: .gitignore  AGENTS.md  README.md  eslint.config.js  index.html  package.json  tsconfig.json  vite.config.ts
.workspace/: decisions.md  history.md  plan.md  todo.md
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: analysis.rs  commands.rs  credentials.rs  db.rs  lib.rs  main.rs  models.rs  recommendations.rs
src-tauri/src/sources/: obsidian.rs
src-tauri/tests/: analysis_backend.rs  checklist_tree.rs  obsidian_parser.rs  recommendations.rs  storage_schema.rs
src/components/: AnalysisView.test.tsx  AnalysisView.tsx  AppShell.test.tsx  AppShell.tsx  ChatComposer.test.tsx  ChatComposer.tsx  ChecklistView.test.tsx  ChecklistView.tsx  EmptyState.tsx  ResponsiveLayout.test.ts  SettingsPopover.test.tsx  SettingsPopover.tsx  SourceBadge.tsx  TaskFlowCard.tsx  TopBar.tsx  ViewSwitcher.tsx  VisualCanvas.test.tsx  VisualCanvas.tsx
src/lib/analysis/: cache.test.ts  cache.ts
src/lib/api/: cole.test.ts  cole.ts
src/lib/openui/: coleLibrary.tsx
src/lib/store/: useColeUiStore.ts
src/test/: unhandledRejections.ts
src/types/: cole.ts
