[package]
name = "cole"
version = "0.1.0"
description = "Local-first AI task assistant"
authors = ["sangjinsu"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cole_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.40.1", features = ["bundled"] }
regex = "1.12.4"
sha2 = "0.11.0"
hex = "0.4.3"
walkdir = "2.5.0"
thiserror = "2.0.18"
tauri-plugin-dialog = "2.7.1"
time = { version = "0.3.45", features = ["formatting"] }

[dev-dependencies]
tempfile = "3.27.0"
